--- a/src/app/_components/topo/topo.component.html
+++ b/src/app/_components/topo/topo.component.html
@@ -14,7 +14,7 @@
           Universidades
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" > Nova Universidade </a>
+          <a class="dropdown-item" routerLink="nova-universidade" > Nova Universidade </a>
           <a class="dropdown-item" routerLink="universidades"> Lista Universidade</a>
         </div>
       </li>
@@ -23,7 +23,7 @@
           Departamentos
         </a>
         <div class="dropdown-menu" aria-labelledby="departamento">
-          <a class="dropdown-item"  >Novo Departamento</a>
+          <a class="dropdown-item"  routerLink="novo-departamento" >Novo Departamento</a>
           <a class="dropdown-item"  routerLink="departamentos">Lista Departamento</a>
 
         </div>
@@ -33,7 +33,7 @@
           Cursos
         </a>
         <div class="dropdown-menu" aria-labelledby="cursos">
-          <a class="dropdown-item"  >Novo Curso</a>
+          <a class="dropdown-item" routerLink="novo-curso"  >Novo Curso</a>
           <a class="dropdown-item" routerLink="cursos" >Lista Cursos</a>
 
         </div>
@@ -43,7 +43,7 @@
           Disciplinas
         </a>
         <div class="dropdown-menu" aria-labelledby="disciplinas">
-          <a class="dropdown-item"  >Nova Disciplina</a>
+          <a class="dropdown-item"  routerLink="nova-disciplina" >Nova Disciplina</a>
           <a class="dropdown-item" routerLink="disciplinas" >Lista Disciplinas</a>
 
 
@@ -54,7 +54,7 @@
           Professores
         </a>
         <div class="dropdown-menu" aria-labelledby="professores">
-          <a class="dropdown-item"  >Novo Professor</a>
+          <a class="dropdown-item" routerLink="novo-professor"  >Novo Professor</a>
           <a class="dropdown-item"  routerLink="professores" >Lista Professores</a>
         </div>
       </li>
@@ -63,7 +63,7 @@
           Alunos
         </a>
         <div class="dropdown-menu" aria-labelledby="alunos">
-          <a class="dropdown-item"  >Alunos</a>
+          <a class="dropdown-item"  routerLink="novo-aluno" >Alunos</a>
           <a class="dropdown-item"  routerLink="alunos" >Lista Alunos</a>
 
         </div>
