--- a/src/app/_components/conteudo/cursos/novo-curso/novo-curso.component.html
+++ b/src/app/_components/conteudo/cursos/novo-curso/novo-curso.component.html
@@ -1,3 +1,31 @@
-<p>
-  novo-curso works!
-</p>
+<form #formulario="ngForm" (ngSubmit)="cadastrarCurso()">
+
+    <div class="row">
+      <div class="col-md-3">
+        <input class="form-control form-control-sm" type="text" required ngModel name="nomeProduto">
+      </div>
+      <div class="col-md-3">
+        <input class="form-control form-control-sm" type="number" required min=0 pattern="^[0-9]*" ngModel name="preco">
+      </div>
+      <div class="col-md-3">
+        <div class="checkbox" *ngFor="let i of ingredientes">
+          <input type="checkbox" [name]=i.codigo  [ngModel]=false>
+          <label > {{i.nome}}</label>
+
+        </div>
+      </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="row">
+      <div class="col-md-1">
+        <button
+        (click)="teste()" routerLinkActive="active" class="btn btn-outline-primary">Voltar</button>
+      </div>
+      <div class="col-md-2">
+        <button *ngIf="!formulario.valid" type="submit" disabled class="btn btn-outline-primary">Adicionar Pizza</button>
+        <button *ngIf="formulario.valid" type="submit" class="btn btn-outline-primary">Adicionar Pizza</button>
+      </div>
+    </div>
+  </form>
