--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+.card{
+  margin-top: 50px;
+  padding: 20px;
+  background-color: #e3e3e3
+}
+
+.btn{
+  margin-right: 10px;
+}
