--- a/src/app/_components/conteudo/cursos/novo-curso/novo-curso.component.html
+++ b/src/app/_components/conteudo/cursos/novo-curso/novo-curso.component.html
@@ -1,31 +1,47 @@
-<form #formulario="ngForm" (ngSubmit)="cadastrarCurso()">
+<div class="card">
+  <h3 class="text-center">Novo curso</h3>
 
-    <div class="row">
-      <div class="col-md-3">
-        <input class="form-control form-control-sm" type="text" required ngModel name="nomeProduto">
-      </div>
-      <div class="col-md-3">
-        <input class="form-control form-control-sm" type="number" required min=0 pattern="^[0-9]*" ngModel name="preco">
-      </div>
-      <div class="col-md-3">
-        <div class="checkbox" *ngFor="let i of ingredientes">
-          <input type="checkbox" [name]=i.codigo  [ngModel]=false>
-          <label > {{i.nome}}</label>
+  <form #formulario="ngForm" (ngSubmit)="cadastrarCurso()">
 
-        </div>
+    <div class="form-group row">
+      <label class="col-2 col-form-label">Curso</label>
+      <div class="col-10">
+        <input type="text"  required class="form-control" name="nome" placeholder="Nome Curso" ngModel>
       </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <div class="row">
-      <div class="col-md-1">
-        <button
-        (click)="teste()" routerLinkActive="active" class="btn btn-outline-primary">Voltar</button>
+    <div class="form-group row">
+      <label class="col-2 col-form-label">Departamento</label>
+      <div class="col-10">
+        <select required class="form-control" name="departamento" ngModel>
+          <option *ngFor="let item of departamentos"> {{item.nome}}</option>
+        </select>
       </div>
-      <div class="col-md-2">
-        <button *ngIf="!formulario.valid" type="submit" disabled class="btn btn-outline-primary">Adicionar Pizza</button>
-        <button *ngIf="formulario.valid" type="submit" class="btn btn-outline-primary">Adicionar Pizza</button>
+    </div>
+    <div class="form-group row">
+      <label class="col-2 col-form-label">Área</label>
+      <div class="col-10">
+        <input type="text" class="form-control" required name="area" placeholder="Área" ngModel>
       </div>
+    </div>
+    <div class="form-group row">
+      <label class="col-2 col-form-label">Vagas</label>
+      <div class="col-10">
+        <input type="number" class="form-control" required name="vagas"  placeholder="0" ngModel >
+      </div>
+    </div>
+
+    <div class="d-flex flex-row-reverse">
+        <input type="reset" class="btn btn-outline-danger" value="Resetar">
+        <ng-container *ngIf="formulario.valid; else elseTemplate">
+            <input type="submit" class="btn btn-outline-primary" value="Cadastrar">
+        </ng-container>
+        <ng-template #elseTemplate>
+            <input type="submit" disabled class="btn btn-outline-primary" value="Cadastrar">
+        </ng-template>
+
+
     </div>
   </form>
+
+
+</div>
