--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 ﻿<!-- main app container -->
 <div>
-    <app-topo></app-topo>
-    <div class="container">
-    <alert></alert>
-    <router-outlet></router-outlet>
-</div>
+  <app-topo></app-topo>
+  <div class="container">
+    <div class="conteudo">
+      <alert></alert>
+      <router-outlet></router-outlet>
+    </div>
+  </div>
 </div>
