--- a/src/app/_components/conteudo/alunos/novo-aluno/novo-aluno.component.html
+++ b/src/app/_components/conteudo/alunos/novo-aluno/novo-aluno.component.html
@@ -1,3 +1,101 @@
-<p>
-  novo-aluno works!
-</p>
+<div class="card">
+  <h3 class="text-center">Novo aluno</h3>
+
+  <form #formulario="ngForm" (ngSubmit)="cadastrarCurso()">
+
+    <div class="form-group row">
+      <label class="col-2 col-form-label">Nome:</label>
+      <div class="col-10">
+        <input type="text" required class="form-control" name="nome" placeholder="Nome do aluno" ngModel>
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label class="col-2 col-form-label">Email:</label>
+      <div class="col-10">
+        <input type="email" required class="form-control" name="email" placeholder="Email" ngModel>
+      </div>
+    </div>
+
+
+
+    <div class="form-group row">
+      <label class="col-2 col-form-label">Telefone:</label>
+      <div class="col-10">
+        <input type="text" class="form-control" mask="(00) 0000-0000" required name="telefone" placeholder="Telefone"
+          ngModel>
+      </div>
+    </div>
+
+
+    <div class="form-group row">
+      <label class="col-2 col-form-label">Endereço:</label>
+      <div class="col-10">
+        <input type="text" required class="form-control" name="endereco" placeholder="Endereço" ngModel>
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label class="col-2 col-form-label">Ano de início:</label>
+      <div class="col-10">
+        <input type="text" required class="form-control" mask="0000" name="ano-inicio" ngModel>
+      </div>
+    </div>
+
+
+    <div class="form-group row">
+      <label class="col-2 col-form-label">Curso:</label>
+      <div class="col-10">
+        <select required class="form-control" name="curso" ngModel>
+          <option *ngFor="let item of cursos"> {{item.nome}}</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label class="col-2 col-form-label">Semestre:</label>
+      <div class="col-10">
+        <input type="text" required class="form-control"  name="semestre" mask="09" ngModel>
+      </div>
+    </div>
+
+
+    <div class="form-group row">
+      <label class="col-2 col-form-label">Usuário:</label>
+      <div class="col-10">
+        <input type="text" required class="form-control" name="usuario" placeholder="Usuário" ngModel>
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label class="col-2 col-form-label">Senha:</label>
+      <div class="col-10">
+        <input type="password" required class="form-control" name="senha" ngModel>
+      </div>
+    </div>
+
+    <div class="form-group row">
+        <label class="col-2 col-form-label">Opções:</label>
+        <div class="col-10">
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input" name="bolsista" ngModel>
+            <label class="form-check-label" >Bolsista</label>
+          </div>
+
+        </div>
+      </div>
+
+
+    <div class="d-flex flex-row-reverse">
+      <input type="reset" class="btn btn-outline-danger" value="Resetar">
+      <ng-container *ngIf="formulario.valid; else elseTemplate">
+        <input type="submit" class="btn btn-outline-primary" value="Cadastrar">
+      </ng-container>
+      <ng-template #elseTemplate>
+        <input type="submit" disabled class="btn btn-outline-primary" value="Cadastrar">
+      </ng-template>
+    </div>
+  </form>
+
+
+</div>
