--- a/src/app/_components/topo/topo.component.html
+++ b/src/app/_components/topo/topo.component.html
@@ -45,8 +45,7 @@
         <div class="dropdown-menu" aria-labelledby="disciplinas">
           <a class="dropdown-item"  routerLink="nova-disciplina" >Nova Disciplina</a>
           <a class="dropdown-item" routerLink="disciplinas" >Lista Disciplinas</a>
-
-
+          <a class="dropdown-item" routerLink="cadastrar-aluno" >Cadastrar aluno em disciplina</a>
         </div>
       </li>
       <li class="nav-item dropdown">
@@ -63,7 +62,7 @@
           Alunos
         </a>
         <div class="dropdown-menu" aria-labelledby="alunos">
-          <a class="dropdown-item"  routerLink="novo-aluno" >Alunos</a>
+          <a class="dropdown-item"  routerLink="novo-aluno" >Novo Aluno</a>
           <a class="dropdown-item"  routerLink="alunos" >Lista Alunos</a>
 
         </div>
