--- a/src/app/_components/conteudo/departamentos/departamentos.component.html
+++ b/src/app/_components/conteudo/departamentos/departamentos.component.html
@@ -22,7 +22,7 @@
         <td>{{ i.curso_area }}</td>
         <td>{{ i.curso_vagas }}</td>
         <td>
-          <button type="button" class="btn btn-outline-primary btn">
+          <button type="button" (click)="editar(i)" class="btn btn-outline-primary btn">
               <fa name="edit" ></fa>
 
           </button>
