--- a/src/app/_components/conteudo/alunos/editar-alunos/editar-alunos.component.html
+++ b/src/app/_components/conteudo/alunos/editar-alunos/editar-alunos.component.html
@@ -6,14 +6,14 @@
     <div class="form-group row">
       <label class="col-2 col-form-label">Nome:</label>
       <div class="col-10">
-        <input type="text" required class="form-control" name="nome" placeholder="Nome do aluno" [(ngModel)]="aluno.">
+        <input type="text" required class="form-control" name="nome" placeholder="Nome do aluno" [(ngModel)]="aluno.nome">
       </div>
     </div>
 
     <div class="form-group row">
       <label class="col-2 col-form-label">Email:</label>
       <div class="col-10">
-        <input type="email" required class="form-control" name="email" placeholder="Email" [(ngModel)]="aluno.">
+        <input type="email" required class="form-control" name="email" placeholder="Email" [(ngModel)]="aluno.email">
       </div>
     </div>
 
@@ -23,7 +23,7 @@
       <label class="col-2 col-form-label">Telefone:</label>
       <div class="col-10">
         <input type="text" class="form-control" mask="(00) 0000-0000" required name="telefone" placeholder="Telefone"
-        [(ngModel)]="aluno.">
+        [(ngModel)]="aluno.telefone">
       </div>
     </div>
 
@@ -31,14 +31,14 @@
     <div class="form-group row">
       <label class="col-2 col-form-label">Endereço:</label>
       <div class="col-10">
-        <input type="text" required class="form-control" name="endereco" placeholder="Endereço" [(ngModel)]="aluno.">
+        <input type="text" required class="form-control" name="endereco" placeholder="Endereço" [(ngModel)]="aluno.endereco">
       </div>
     </div>
 
     <div class="form-group row">
       <label class="col-2 col-form-label">Ano de início:</label>
       <div class="col-10">
-        <input type="text" required class="form-control" mask="0000" name="ano-inicio" [(ngModel)]="aluno.">
+        <input type="text" required class="form-control" mask="0000" name="anoinicio" [(ngModel)]="aluno.anoinicio">
       </div>
     </div>
 
@@ -46,7 +46,7 @@
     <div class="form-group row">
       <label class="col-2 col-form-label">Curso:</label>
       <div class="col-10">
-        <select required class="form-control" name="curso" [(ngModel)]="aluno.">
+        <select required class="form-control" name="curso" [(ngModel)]="aluno.curso">
           <option *ngFor="let item of cursos"> {{item.nome}}</option>
         </select>
       </div>
@@ -55,7 +55,7 @@
     <div class="form-group row">
       <label class="col-2 col-form-label">Semestre:</label>
       <div class="col-10">
-        <input type="text" required class="form-control"  name="semestre" mask="09" ngModel>
+        <input type="text" required class="form-control"  name="semestre" mask="09"  [(ngModel)]="aluno.semestre">
       </div>
     </div>
 
@@ -63,14 +63,14 @@
     <div class="form-group row">
       <label class="col-2 col-form-label">Usuário:</label>
       <div class="col-10">
-        <input type="text" required class="form-control" name="usuario" placeholder="Usuário" ngModel>
+        <input type="text" required class="form-control" name="usuario" placeholder="Usuário"  [(ngModel)]="aluno.usuario">
       </div>
     </div>
 
     <div class="form-group row">
       <label class="col-2 col-form-label">Senha:</label>
       <div class="col-10">
-        <input type="password" required class="form-control" name="senha" ngModel>
+        <input type="password" required class="form-control" name="senha"  [(ngModel)]="aluno.senha">
       </div>
     </div>
 
@@ -78,7 +78,7 @@
         <label class="col-2 col-form-label">Opções:</label>
         <div class="col-10">
           <div class="form-check">
-            <input type="checkbox" class="form-check-input" name="bolsista" ngModel>
+            <input type="checkbox" class="form-check-input" name="bolsista"  [(ngModel)]="aluno.bolsista">
             <label class="form-check-label" >Bolsista</label>
           </div>
 
