--- a/src/app/_components/conteudo/cursos/cursos.component.html
+++ b/src/app/_components/conteudo/cursos/cursos.component.html
@@ -20,7 +20,7 @@
       <td>{{ i.curso_area }}</td>
       <td>{{ i.curso_vagas }}</td>
       <td>
-          <button type="button" class="btn btn-outline-primary btn">
+          <button type="button" (click)="editar(i)" class="btn btn-outline-primary btn">
               <fa name="edit" ></fa>
 
           </button>
