--- a/src/app/_components/conteudo/admin/cursos/cursos.component.html
+++ b/src/app/_components/conteudo/admin/cursos/cursos.component.html
@@ -10,15 +10,19 @@
   <table class="table" style="width:100%">
     <tr>
       <th>Nome</th>
-      <th>Area</th>
+      <th>Área</th>
+      <th>Departamento</th>
+      <th>Professor</th>
       <th>Vagas</th>
       <th>Editar</th>
       <th>Excluir</th>
     </tr>
     <tr *ngFor="let i of (curso | buscar: filter | paginate: config)">
       <td>{{ i.nome }}</td>
-      <td>{{ i.curso_area }}</td>
-      <td>{{ i.curso_vagas }}</td>
+      <td>{{ i.area }}</td>
+      <td>{{ i.departamento }}</td>
+      <td>{{ i.professor }}</td>
+      <td>{{ i.vagas }}</td>
       <td>
           <button type="button" (click)="editar(i)" class="btn btn-outline-primary btn">
               <fa name="edit" ></fa>
