--- a/src/app/_components/conteudo/admin/departamentos/departamentos.component.html
+++ b/src/app/_components/conteudo/admin/departamentos/departamentos.component.html
@@ -11,16 +11,15 @@
       <tr>
 
         <th>Nome</th>
-        <th>Area</th>
-        <th>Vagas</th>
+        <th>Telefone</th>
+        <th>Instituto</th>
         <th>Editar</th>
         <th>Excluir</th>
       </tr>
       <tr *ngFor="let i of (departamento | buscar: filter | paginate: config)">
         <td>{{ i.nome }}</td>
-
-        <td>{{ i.curso_area }}</td>
-        <td>{{ i.curso_vagas }}</td>
+        <td>{{ i.telefone }}</td>
+        <td>{{ i.instituto }}</td>
         <td>
           <button type="button" (click)="editar(i)" class="btn btn-outline-primary btn">
               <fa name="edit" ></fa>
