--- a/src/app/_components/conteudo/admin/disciplinas/editar-disciplinas/editar-disciplinas.component.html
+++ b/src/app/_components/conteudo/admin/disciplinas/editar-disciplinas/editar-disciplinas.component.html
@@ -18,7 +18,7 @@
     <div class="form-group row">
       <label class="col-2 col-form-label">Carga horária:</label>
       <div class="col-10">
-        <input type="number" required class="form-control" name="carga-horaria" [(ngModel)]="disciplina.carga-horaria">
+        <input type="number" required class="form-control" name="cargahoraria" [(ngModel)]="disciplina.carga_horaria">
       </div>
     </div>
     <div class="form-group row">
@@ -33,13 +33,13 @@
     <div class="form-group row">
       <label class="col-2 col-form-label">Horário:</label>
       <div class="col-10">
-        <input type="number" required class="form-control" name="horario" [(ngModel)]="disciplina.horario">
+        <input type="text" required class="form-control" name="horario" [(ngModel)]="disciplina.horario">
       </div>
     </div>
     <div class="form-group row">
       <label class="col-2 col-form-label">Sala:</label>
       <div class="col-10">
-        <input type="number" required class="form-control" name="sala" [(ngModel)]="disciplina.sala">
+        <input type="text" required class="form-control" name="sala" [(ngModel)]="disciplina.sala">
       </div>
     </div>
 
