--- a/src/app/_components/conteudo/admin/cursos/editar-cursos/editar-cursos.component.html
+++ b/src/app/_components/conteudo/admin/cursos/editar-cursos/editar-cursos.component.html
@@ -6,13 +6,13 @@
     <div class="form-group row">
       <label class="col-2 col-form-label">Curso</label>
       <div class="col-10">
-        <input type="text"  required class="form-control" name="nome" placeholder="Nome Curso" ngModel>
+        <input type="text"  required class="form-control" name="nome" placeholder="Nome Curso" [(ngModel)]="curso.nome">
       </div>
     </div>
     <div class="form-group row">
       <label class="col-2 col-form-label">Departamento</label>
       <div class="col-10">
-        <select required class="form-control" name="departamento" ngModel>
+        <select required class="form-control" name="departamento" [(ngModel)]="curso.departamento">
           <option *ngFor="let item of departamentos"> {{item.nome}}</option>
         </select>
       </div>
@@ -20,13 +20,13 @@
     <div class="form-group row">
       <label class="col-2 col-form-label">Área</label>
       <div class="col-10">
-        <input type="text" class="form-control" required name="area" placeholder="Área" ngModel>
+        <input type="text" class="form-control" required name="area" placeholder="Área" [(ngModel)]="curso.area">
       </div>
     </div>
     <div class="form-group row">
       <label class="col-2 col-form-label">Vagas</label>
       <div class="col-10">
-        <input type="number" class="form-control" required name="vagas"  placeholder="0" ngModel >
+        <input type="number" class="form-control" required name="vagas"  placeholder="0" [(ngModel)]="curso.vagas" >
       </div>
     </div>
 
