--- a/src/app/_components/conteudo/admin/departamentos/editar-departamento/editar-departamento.component.html
+++ b/src/app/_components/conteudo/admin/departamentos/editar-departamento/editar-departamento.component.html
@@ -17,10 +17,10 @@
       </div>
     </div>
     <div class="form-group row">
-        <label class="col-2 col-form-label">Universidade:</label>
+        <label class="col-2 col-form-label">Instituto:</label>
         <div class="col-10">
-          <select required class="form-control" name="universidade" [(ngModel)]="departamento.universidade">
-            <option *ngFor="let item of universidade"> {{item.nome}}</option>
+          <select required class="form-control" name="institudo" [(ngModel)]="departamento.instituto">
+            <option *ngFor="let item of instituto"> {{item.nome}}</option>
           </select>
         </div>
       </div>
