--- a/src/app/_components/conteudo/admin/professores/novo-professor/novo-professor.component.html
+++ b/src/app/_components/conteudo/admin/professores/novo-professor/novo-professor.component.html
@@ -4,7 +4,7 @@
   <form #formulario="ngForm" (ngSubmit)="cadastrarProfessor()">
 
     <div class="form-group row">
-      <label class="col-2 col-form-label">Curso:</label>
+      <label class="col-2 col-form-label">Nome:</label>
       <div class="col-10">
         <input type="text" required class="form-control" name="nome" placeholder="Nome do professor" ngModel>
       </div>
