--- a/src/app/_components/conteudo/admin/alunos/editar-alunos/editar-alunos.component.html
+++ b/src/app/_components/conteudo/admin/alunos/editar-alunos/editar-alunos.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <h3 class="text-center">Novo aluno</h3>
 
-  <form #formulario="ngForm" (ngSubmit)="cadastrarCurso()">
+  <form #formulario="ngForm" (ngSubmit)="finalizarEdicao()">
 
     <div class="form-group row">
       <label class="col-2 col-form-label">Nome:</label>
