--- a/src/app/_components/conteudo/admin/cursos/editar-cursos/editar-cursos.component.html
+++ b/src/app/_components/conteudo/admin/cursos/editar-cursos/editar-cursos.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <h3 class="text-center">Novo curso</h3>
 
-  <form #formulario="ngForm" (ngSubmit)="cadastrarCurso()">
+  <form #formulario="ngForm" (ngSubmit)="fianlizarEdicao()">
 
     <div class="form-group row">
       <label class="col-2 col-form-label">Curso</label>
