--- a/src/app/_components/conteudo/admin/disciplinas/editar-disciplinas/editar-disciplinas.component.html
+++ b/src/app/_components/conteudo/admin/disciplinas/editar-disciplinas/editar-disciplinas.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <h3 class="text-center">Editar disciplina</h3>
 
-  <form #formulario="ngForm" (ngSubmit)="cadastrarDisciplina()">
+  <form #formulario="ngForm" (ngSubmit)="cadastrar()">
 
     <div class="form-group row">
       <label class="col-2 col-form-label">Disciplina:</label>
