--- a/src/app/_components/conteudo/admin/professores/editar-professores/editar-professores.component.html
+++ b/src/app/_components/conteudo/admin/professores/editar-professores/editar-professores.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <h3 class="text-center">Novo professor</h3>
 
-  <form #formulario="ngForm" (ngSubmit)="cadastrarProfessor()">
+  <form #formulario="ngForm" (ngSubmit)="cadastrar()">
 
     <div class="form-group row">
       <label class="col-2 col-form-label">Curso:</label>
@@ -50,7 +50,7 @@
           <label class="form-check-label" >Administrador</label>
         </div>
         <div class="form-check">
-          <input type="checkbox" class="form-check-input" name="coordernador" [(ngModel)]="professor.coordernador">
+          <input type="checkbox" class="form-check-input" name="coordernador" [(ngModel)]="professor.coordenador">
           <label class="form-check-label">Coordenador</label>
         </div>
       </div>
