--- a/src/app/_components/conteudo/admin/universidade/universidade.component.html
+++ b/src/app/_components/conteudo/admin/universidade/universidade.component.html
@@ -11,18 +11,19 @@
       <tr>
 
         <th>Nome</th>
-        <th>Area</th>
-        <th>Vagas</th>
+        <th>Endereço</th>
+        <th>Cidade</th>
+        <th>CEP</th>
         <th>Editar</th>
         <th>Excluir</th>
       </tr>
       <tr *ngFor="let i of (universidade | buscar: filter | paginate: config)">
         <td>{{ i.nome }}</td>
-
-        <td>{{ i.curso_area }}</td>
-        <td>{{ i.curso_vagas }}</td>
+        <td>{{ i.endereco }}</td>
+        <td>{{ i.cidade }}</td>
+        <td>{{ i.cep }}</td>
         <td>
-          <button type="button" class="btn btn-outline-primary btn">
+          <button type="button" (click)="editar(i)" class="btn btn-outline-primary btn">
               <fa name="edit" ></fa>
 
           </button>
