--- a/src/app/_components/conteudo/admin/disciplinas/editar-disciplinas/editar-disciplinas.component.html
+++ b/src/app/_components/conteudo/admin/disciplinas/editar-disciplinas/editar-disciplinas.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <h3 class="text-center">Editar disciplina</h3>
 
-  <form #formulario="ngForm" (ngSubmit)="cadastrar()">
+  <form #formulario="ngForm" (ngSubmit)="finalizarEdicao()">
 
     <div class="form-group row">
       <label class="col-2 col-form-label">Disciplina:</label>
@@ -18,14 +18,15 @@
     <div class="form-group row">
       <label class="col-2 col-form-label">Carga horária:</label>
       <div class="col-10">
-        <input type="number" required class="form-control" name="cargahoraria" [(ngModel)]="disciplina.carga_horaria">
+        <input type="number" required class="form-control" name="carga_horaria" [(ngModel)]="disciplina.carga_horaria">
       </div>
     </div>
     <div class="form-group row">
       <label class="col-2 col-form-label">Curso:</label>
       <div class="col-10">
-        <select required class="form-control" name="curso" [(ngModel)]="disciplina.curso">
-          <option *ngFor="let item of cursos"> {{item.nome}}</option>
+        <select required class="form-control" name="curso" [(ngModel)]="disciplina.idCurso">
+
+          <option *ngFor="let item of cursos" value={{item.idCurso}}> {{item.nome}}</option>
         </select>
       </div>
     </div>
@@ -46,8 +47,8 @@
     <div class="form-group row">
       <label class="col-2 col-form-label">Professor:</label>
       <div class="col-10">
-        <select required class="form-control" name="professor" [(ngModel)]="disciplina.professor">
-          <option *ngFor="let item of professores" [value]="item.nome"> {{item.nome}}</option>
+        <select required class="form-control" name="professor" [(ngModel)]="disciplina.idProfessor">
+          <option *ngFor="let item of professores" value="{{item.idProfessor}}"> {{item.nome}}</option>
         </select>
       </div>
     </div>
